<resources>
    <string name="app_name">EmvL2 Split Demo</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="all_open">All Open</string>
    <string name="all_close">All Close</string>
    <string name="amount">Amount (cent)</string>
    <string name="fail">Fail</string>
    <string name="success">Success</string>
    <string name="loading">Loading</string>
    <string name="handling">Processing</string>
    <string name="requesting">Requesting</string>
    <string name="connect_loading">connecting to sdk</string>
    <string name="connect_success">connect to sdk success</string>
    <string name="connect_fail">connect to sdk fail, please exit to reconnect</string>
    <string name="basic">Basic</string>
    <string name="read_card">ReadCard</string>
    <string name="pin_pad">PinPad</string>
    <string name="security">Security</string>
    <string name="emv">EMV</string>
    <string name="scan">Scan</string>
    <string name="version">Version</string>
    <string name="other">Other</string>
    <string name="etc">ETC</string>
    <string name="apn">APN</string>
    <string name="m112">M112</string>
    <string name="biometric">Biometric</string>
    <string name="hce">HCE</string>
    <string name="basic_get_sys_param">Get system parameters</string>
    <string name="basic_set_sys_param">Set system parameters</string>
    <string name="basic_buzzer">Buzzer</string>
    <string name="basic_led">LED lamp control</string>
    <string name="basic_led_rb_on_new">Red/Blue on(New)</string>
    <string name="basic_led_yg_on_new">Yellow/Green on(New)</string>
    <string name="basic_led_all_on_new">All on(New)</string>
    <string name="basic_led_all_off_new">All off(New)</string>
    <string name="basic_led_additional">Additional LED light control</string>
    <string name="basic_led_add_corner">Corner LED</string>
    <string name="basic_led_add_indicator">Indicator LED</string>
    <string name="basic_led_add_camera_indicator">Camera indicator LED</string>
    <string name="basic_led_add_charge">Charge LED</string>
    <string name="basic_led_add_felica">(Felica card) NFC LED</string>
    <string name="basic_screen_mode">Set screen exclusive</string>
    <string name="basic_sys_set_wakeup">Set system wakeup source</string>
    <string name="basic_dynamic_perm_wifi_proxy">Dynamic permission and wifi proxy</string>
    <string name="basic_ca_cert_manager">CA certificate manage</string>
    <string name="basic_cpu_info">CPU info</string>
    <string name="basic_schedule_reboot">Schedule reboot</string>
    <string name="basic_customize_function_key">Customize function key</string>
    <string name="basic_network_manage">Network manage</string>
    <string name="basic_phone_manage">Phone manage</string>
    <string name="basic_rtc_battery_info">RTC batter info</string>
    <string name="basic_cit_test">Cit test</string>
    <string name="basic_get_tamper_log">Get tamper log</string>
    <string name="basic_buzzer_time">Buzzer time</string>
    <string name="basic_buzzer_time_delay">delay time (200~10000 ms)</string>
    <string name="basic_buzzer_1">1 time</string>
    <string name="basic_buzzer_2">2 time</string>
    <string name="basic_buzzer_3">3 time</string>
    <string name="basic_buzzer_4">4 time</string>
    <string name="basic_buzzer_5">5 time</string>
    <string name="basic_buzzer_6">6 time</string>
    <string name="basic_buzzer_time_delay_hint">Please input correct delay time</string>
    <string name="basic_sys_key">Key name(Only set Reserved key)</string>
    <string name="basic_sys_value">Key value</string>
    <string name="basic_sys_key_hint">Please input key name</string>
    <string name="basic_set_screen_monopoly">Set screen monopoly</string>
    <string name="basic_clear_screen_monopoly">Clear screen monopoly</string>
    <string name="basic_set_status_bar_drop_down_mode">Set status bar drop down mode</string>
    <string name="basic_disable">Disable</string>
    <string name="basic_enable">Enable</string>
    <string name="basic_set_nav_bar_visibility">Set navigation bar(items) visibility</string>
    <string name="basic_hide_nav_bar">Hide navigation bar</string>
    <string name="basic_show_nav_bar">Show navigation bar</string>
    <string name="basic_hide_nav_back">Hide Back key</string>
    <string name="basic_hide_nav_home">Hide Home key</string>
    <string name="basic_hide_nav_recent">Hide Recent key</string>
    <string name="basic_hide_nav_back_and_home">Hide Back and Home key</string>
    <string name="basic_hide_nav_back_and_recent">Hide Back and Recent key</string>
    <string name="basic_hide_nav_home_and_recent">Hide Home and Recent key</string>
    <string name="basic_hide_nav_all">Hide all</string>
    <string name="basic_show_nav_all">Show all</string>
    <string name="basic_screen_model_hint">Screen exclusive\nPower key disabled\nVolume key disabled\nSystem status bar disabled\nSystem navigation bar disabled</string>
    <string name="basic_emv_callback_timeout_time">Set EMV callback timeout time</string>
    <string name="basic_channel">channel(1-IC wakeup, 2-MagCard wakeup, 3-Physical key wakeup)</string>
    <string name="basic_mode">mode</string>
    <string name="basic_kb_beep_mode">keyboard beep mode</string>
    <string name="basic_kb_backlight">Keyboard backlight</string>
    <string name="basic_kb_brightness">brightness value</string>
    <string name="basic_kb_get_brightness">Get brightness</string>
    <string name="basic_kb_set_brightness">Set brightness</string>
    <string name="basic_shared_lib_test">Share lib test</string>
    <string name="basic_install_shared_libs">Install shared libs</string>
    <string name="basic_delete_shared_libs">Delete shared libs</string>
    <string name="basic_shared_libs_dir">Shared lib directory</string>
    <string name="basic_liteso_test">Liteso test</string>
    <string name="basic_liteso_install">Install liteso</string>
    <string name="basic_liteso_remove">Remove liteso</string>
    <string name="basic_liteso_index">index</string>
    <string name="basic_liteso_file_path">file path</string>
    <string name="basic_liteso_run">Run liteso</string>
    <string name="basic_liteso_get_info">Get liteso info</string>
    <string name="basic_liteso_get_running_info">Get running liteso info</string>
    <string name="basic_liteso_customize_cmd">Liteso customize cmd</string>
    <string name="basic_mag_status">Mag card status:</string>
    <string name="basic_ic_status">IC card status:</string>
    <string name="basic_nfc_status">NFC card status:</string>
    <string name="basic_sam_status">SAM card status:</string>
    <string name="basic_card_status_normal">Normal</string>
    <string name="basic_card_status_error">Error</string>
    <string name="basic_sam_count">SAM slot count: </string>
    <string name="basic_nfc_config">NFC module: </string>
    <string name="basic_dynamic_permission">Allow dynamic permission</string>
    <string name="basic_set_global_wifi_proxy">Set global wifi proxy</string>
    <string name="basic_install_ca_cert">Install CA certificate</string>
    <string name="basic_ca_cert_name">Certificate name</string>
    <string name="basic_ca_cert_contents">Certificate contents</string>
    <string name="basic_uninstall_ca_cert">Uninstall CA certificate</string>
    <string name="basic_get_cpu_usage">Get cpu usage</string>
    <string name="basic_cpu_usage">CPU usage:</string>
    <string name="basic_get_cpu_temp">Get cpu temperature</string>
    <string name="basic_cpu_temp">CPU temperature:</string>
    <string name="basic_set_schedule_reboot">Set schedule reboot</string>
    <string name="basic_set_schedule_hour">Hour(0~23)</string>
    <string name="basic_set_schedule_minute">Minute(0~59)</string>
    <string name="basic_set_schedule_second">Second(0~59)</string>
    <string name="basic_set_schedule_millisecond">Millisecond(0~999)</string>
    <string name="basic_clear_schedule_reboot">Clear schedule reboot</string>
    <string name="basic_function_key_left_key">Left function key</string>
    <string name="basic_function_key_right_key">Right function key</string>
    <string name="basic_function_key_volume_up">Set as volume up key</string>
    <string name="basic_function_key_volume_down">Set as volume down key</string>
    <string name="basic_function_key_native">Set as native key</string>
    <string name="basic_lmk_package">LMK package</string>
    <string name="basic_set_lmk_package">set LMK package</string>
    <string name="basic_remove_lmk_package">remove LMK package</string>
    <string name="basic_network_type">type[0–34]</string>
    <string name="basic_set_preferred_network_type">set preferred network</string>
    <string name="basic_sim_card_slot_index">SIM card slot index[0–9]</string>
    <string name="basic_get_supported_network_type">get supported network type</string>
    <string name="basic_enable_disable_airplane_mode">enable/disable airplane mode</string>
    <string name="basic_enable_disable_sim_card_data_roaming">enable/disable sim card data roaming</string>
    <string name="basic_enable_disable_phone_call">enable/disable phone call</string>
    <string name="basic_device_manager">Device manager</string>
    <string name="basic_get_card_usage_count">Get card usage count</string>
    <string name="basic_set_module_accessibility">Set module accessibility</string>
    <string name="basic_get_module_accessibility">Get module accessibility</string>
    <string name="basic_ped_test">PED test</string>
    <string name="basic_ped_get_mode">Get PED mode</string>
    <string name="basic_ped_set_mode">Set PED mode</string>
    <string name="basic_ped_mode_hint">PED mode(1-Sharing mode, 2-Isolation mode, 3-Mixed mode)</string>
    <string name="basic_ped_get_keys_info">Get PED keys info</string>
    <string name="basic_get_rtc_battery_vol">Get RTC Battery Vol</string>
    <string name="basic_log_control">Log control</string>
    <string name="basic_watermark_test">Contactless card watermark test</string>
    <string name="basic_watermark_set_alpha">Set watermark alpha</string>
    <string name="basic_watermark_get_alpha">Get watermark alpha</string>
    <string name="basic_watermark_roataion">Screen rotation</string>
    <string name="basic_watermark_get_location">Get watermark location</string>
    <string name="basic_wake_alarm_test">wake/alarm test</string>
    <string name="basic_rst_test">rst test</string>
    <string name="card_test_mag">Magnetic card test</string>
    <string name="card_test_mag_enc">Magnetic card test(Encrypt track data)</string>
    <string name="card_test_mag_track2_enc">Magnetic card test(Track2 Enc)</string>
    <string name="card_test_ic">IC card test</string>
    <string name="card_test_nfc">NFC card test</string>
    <string name="card_test_mag_ic_nfc">MAG/IC/NFC card test</string>
    <string name="emv_get_sred">Get sred</string>
    <string name="emv_disable_sred">Disable sred</string>
    <string name="emv_disable_sred_by_set_sys_param">Disable sred by setSysParam()</string>
    <string name="emv_disable_sred_by_set_account_data_sec_param">Disable sred by setAccountDataSecParam()</string>
    <string name="emv_set_account_data_sec_param">Set account data security param</string>
    <string name="emv_get_account_sec_data">Get account security data</string>
    <string name="security_key_system_mksk">SEC_MKSK</string>
    <string name="security_key_system_dukpt">SEC_DUKPT</string>
    <string name="security_key_system_rsa_key">SEC_RSA_KEY</string>
    <string name="print_set_print_speed_dot_leve">Set print dot speed level</string>
    <string name="print_get_print_speed_dot_leve">Get print dot speed level</string>
    <string name="print_level_low">Low</string>
    <string name="print_level_middle">Middle</string>
    <string name="print_level_high">High</string>
</resources>