<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleSize"
        android:elevation="4dp"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/colorAccent"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/print_set_print_speed_dot_leve" />

                    <RadioGroup
                        android:id="@+id/rdg_dot_speed_level"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rdo_low"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/print_level_low" />

                        <RadioButton
                            android:id="@+id/rdo_middle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/print_level_middle" />

                        <RadioButton
                            android:id="@+id/rdo_high"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/print_level_high" />

                    </RadioGroup>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_set_dot_speed_level"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/titleSize"
                        android:layout_marginTop="16dp"
                        android:elevation="8dp"
                        android:gravity="center"
                        android:text="@string/ok"
                        android:textAllCaps="false"
                        android:textAppearance="?android:attr/textAppearanceLargeInverse"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:backgroundTint="@color/colorOrange"
                        app:cornerRadius="8dp" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/colorAccent"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/print_get_print_speed_dot_leve" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_get_dot_speed_level"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/titleSize"
                        android:layout_marginTop="10dp"
                        android:elevation="8dp"
                        android:gravity="center"
                        android:text="@string/ok"
                        android:textAllCaps="false"
                        android:textAppearance="?android:attr/textAppearanceLargeInverse"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:backgroundTint="@color/colorOrange"
                        app:cornerRadius="8dp" />

                    <TextView
                        android:id="@+id/tv_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
