<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/colorAccent"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/emv_get_sred" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/mb_get_sred"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/itemSize"
                        android:layout_marginTop="16dp"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:text="@string/ok"
                        android:textAppearance="?android:attr/textAppearanceLargeInverse"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:backgroundTint="@color/colorOrange"
                        app:cornerRadius="4dp" />

                    <TextView
                        android:id="@+id/tv_get_sred"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textSize="14sp" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/colorAccent"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/emv_disable_sred" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/mb_disable_sred_by_sys_param"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/itemSize"
                        android:layout_marginTop="16dp"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:text="@string/emv_disable_sred_by_set_sys_param"
                        android:textAppearance="?android:attr/textAppearanceLargeInverse"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:backgroundTint="@color/colorOrange"
                        app:cornerRadius="4dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/mb_disable_sred_by_set_account_sec_param"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/itemSize"
                        android:layout_marginTop="16dp"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:text="@string/emv_disable_sred_by_set_account_data_sec_param"
                        android:textAppearance="?android:attr/textAppearanceLargeInverse"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:backgroundTint="@color/colorOrange"
                        app:cornerRadius="4dp" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/colorAccent"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/emv_set_account_data_sec_param" />

                    <RadioGroup
                        android:id="@+id/rdg_adsp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rdo_mksk"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/security_key_system_mksk" />

                        <RadioButton
                            android:id="@+id/rdo_dukpt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/security_key_system_dukpt" />

                        <RadioButton
                            android:id="@+id/rdo_rsa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/security_key_system_rsa_key" />
                    </RadioGroup>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edt_key_input_1_lay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:counterEnabled="true"
                        app:counterMaxLength="1024">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_key_input_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"
                            android:textColor="@color/colorTextContent"
                            android:textColorHint="@color/colorTextHelp"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edt_key_input_2_lay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:visibility="gone"
                        app:counterEnabled="true"
                        app:counterMaxLength="1024">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_key_input_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine"
                            android:textColor="@color/colorTextContent"
                            android:textColorHint="@color/colorTextHelp"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/mb_set_adsp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/itemSize"
                        android:layout_marginTop="16dp"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:text="@string/ok"
                        android:textAppearance="?android:attr/textAppearanceLargeInverse"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:backgroundTint="@color/colorOrange"
                        app:cornerRadius="4dp" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/colorAccent"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/emv_get_account_sec_data" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/mb_get_asd"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/itemSize"
                        android:layout_marginTop="16dp"
                        android:elevation="4dp"
                        android:gravity="center"
                        android:text="@string/ok"
                        android:textAppearance="?android:attr/textAppearanceLargeInverse"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:backgroundTint="@color/colorOrange"
                        app:cornerRadius="4dp" />

                    <TextView
                        android:id="@+id/tv_get_asd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="14sp" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>